minishop-kristof/deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minishop-kristof-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minishop-kristof-redis
  template:
    metadata:
      labels:
        app: minishop-kristof-redis
    spec:
      containers:
        - name: podinfo
          image: redis:7.4-alpine
          ports:
            - name: redis
              containerPort: 6379
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 15
            periodSeconds: 15
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              memory: 128Mi
