minishop-kristof/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minishop-kristof
spec:
  replicas: 3
  selector:
    matchLabels:
      app: minishop-kristof
  template:
    metadata:
      labels:
        app: minishop-kristof
    spec:
      containers:
        - name: podinfo
          image: ghcr.io/stefanprodan/podinfo:6.7.1
          ports:
            - name: http
              containerPort: 9898
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 15
          resources:
            requests:
              cpu: 20m
              memory: 32Mi
            limits:
              memory: 128Mi
