minishop-kristof/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: minishop-kristof-redis
spec:
  selector:
    app: minishop-kristof-redis
  ports:
    - name: http
      port: 80
      targetPort: http
