minishop-kristof/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: minishop-kristof-web
  labels: minishop-kristof-web
spec:
  selector:
    app: minishop-kristof-web
  ports:
    - name: http
      port: 80
      targetPort: http
