minishop-kristof/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minishop-kristof
spec:
  selector:
    app: minishop-kristof
  ports:
    - name: http
      port: 80
      targetPort: http
